# 112_summer_assignment

./: 1-D_schrodinger_analysis_python(approach-2).ipynb  1-D_schrodinger_analysis_python.ipynb  2-D_schrodinger_analysis_julia.ipynb  2-D_schrodinger_analysis_python.ipynb  LICENSE  Positon-dependent_mass_analysis.ipynb  README.md  pyproject.toml
result/2-d_harmonic_oscillator_potential/: py-no0state.html  py-no1state.html  py-no2state.html  py-no3state.html  py-no4state.html  py-no5state.html
slides/: 0801_pogress_reports_Raw.html  0814_pogress_reports_Raw.html  0821_pogress_reports_Raw.html  0905_pogress_reports_Raw.html
