[tool.poetry]
name = "112-summer-assignment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = ">=1.21,<1.25"
scipy = "^1.11.1"
matplotlib = "^3.7.2"
numba = "^0.57.1"
ipykernel = "^6.25.1"
plotly = "^5.16.0"
nbformat = "^5.9.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
